--- a/app_client/app-components/dashboard/instructor/course/course.instructor.view.html
+++ b/app_client/app-components/dashboard/instructor/course/course.instructor.view.html
@@ -17,9 +17,18 @@
                         type="btn"
                         class="close"
                         title="Copy section key"
-                        ng-click="copySuccess(section.name)"
+                        ng-click="copySectionKeySuccess(section.name)"
                         ngclipboard
                         data-clipboard-text="{{section.section_key}}">
+                            <i class="fa fa-clipboard" aria-hidden="true"></i>
+                    </button>
+                    <button
+                        type="btn"
+                        class="close"
+                        title="Copy ta key"
+                        ng-click="copyTAKeySuccess(course.title)"
+                        ngclipboard
+                        data-clipboard-text="{{course.ta_key}}">
                             <i class="fa fa-clipboard" aria-hidden="true"></i>
                     </button>
                 </div>
